--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,22 @@
         android:textSize="@dimen/stopwatchSize"/>
 
     <Button
-        android:text="@string/startButtonTitle"
+        android:text="@string/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/startButton"
         android:layout_marginTop="15dp"
         android:layout_below="@id/stopwatchTextView"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/startButton"
+        android:layout_alignLeft="@+id/startButton"
+        android:layout_alignStart="@+id/startButton"
+        android:layout_marginTop="15dp"
+        android:id="@+id/stopButton" />
 
 </RelativeLayout>
